<resources>
    <string name="app_name">Quote Hub</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Error!</string>
    <string name="error_message">Something went wrong :(</string>
    <string name="accept_button_text">Ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_quote_text">Add quote</string>
    <string name="quote_hint">Insert your quote</string>
    <string name="email_hint">Insert your email</string>
    <string name="password_hint">Insert your password</string>
    <string name="log_in_button">Login</string>
    <string name="my_profile_title">Profile</string>
    <string name="favorite_jokes_title">Favorites</string>
    <string name="all_jokes_title">Quotes</string>
    <string name="repeat_password_hint">Repeat your password</string>
    <string name="username_hint">Insert your username</string>
    <string name="register_button">Register</string>
    <string name="welcome_description">QuoteHub is an amazing club for writers</string>
    <string name="log_out_button">Logout</string>
    <string name="no_items_text">No Items</string>
    <string name="username_error">Username error</string>
    <string name="email_error">Email error</string>
    <string name="password_error">Password error</string>
    <string name="repeat_password_error">Repeat password error</string>
    <string name="quote_error">Each quote must have at least 10 characters</string>
    <string name="username_text">username</string>
    <string name="email_text">email</string>
    <string name="number_of_quotes_text">number of quotes</string>
</resources>
